try CI of flutter for first time

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,11 @@
 name: Flutter CI
 on:
+  push:
+    branches:
+      - master
   pull_request:
     branches: 
-      - main
+      - master
 
 jobs:
   test:
